--- a/ZPG/ZPG.vcxproj
+++ b/ZPG/ZPG.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="DrawableObject.cpp" />
     <ClCompile Include="DynamicRotate.cpp" />
+    <ClCompile Include="HeadLight.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="PointLight.cpp" />
@@ -154,6 +155,7 @@
     <ClCompile Include="ShaderParis.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="SphereData.cpp" />
+    <ClCompile Include="Spotlight.cpp" />
     <ClCompile Include="Transform.cpp" />
     <ClCompile Include="Translate.cpp" />
     <ClCompile Include="TreeData.cpp" />
@@ -168,6 +170,7 @@
     <ClInclude Include="DynamicRotate.h" />
     <ClInclude Include="EnumLightType.h" />
     <ClInclude Include="EnumObservableSubjects.h" />
+    <ClInclude Include="HeadLight.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="Observer.h" />
@@ -181,6 +184,7 @@
     <ClInclude Include="ShaderPairs.h" />
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="SphereData.h" />
+    <ClInclude Include="Spotlight.h" />
     <ClInclude Include="Subject.h" />
     <ClInclude Include="tiny_obj_loader.h" />
     <ClInclude Include="Transform.h" />
